# NMRVis

./: .gitignore  CMakeLists.txt
cmake/modules/: DownloadFileCheck.in.cmake  FlowVRConfig.cmake
data/: CMakeLists.txt
data/gromacs_traj/: CMakeLists.txt  gen_traj.bash
extra_distrib/: CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  c_flowvr_event_loop.cpp  c_flowvr_event_loop.h  main.cpp  nmr_plot.cpp  nmr_plot.h  nmr_plot.ui  nmr_shift_data.h  port_data_base.h  proj_folders.h.cfg
src/fake_io_mod/: CMakeLists.txt  main.cpp
src/pdb_generate_mod/: CMakeLists.txt  pdb_gen_mod_main.cpp
src/selector_mod/: CMakeLists.txt  selector_mod_main.cpp
src/shift_calc_mod/: CMakeLists.txt  nmr_shift_data_parse.cpp  nmr_shift_data_parse.h  shift_calc_mod_main.cpp
src/spectra_gui/: CMakeLists.txt  c_flowvr_event_loop.cpp  c_flowvr_event_loop.h  main.cpp  nmr_plot.cpp  nmr_plot.h  nmr_plot.ui  nmr_shift_data_process.cpp  nmr_shift_data_process.h
start_scripts/: CMakeLists.txt  NMRVis_test.py.cfg  start_NMRVis.bash.cfg
